--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>MEROLYCO</title>
 
-<meta http-equiv="Content-Security-Policy" content="connect-src *; default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
+<!--<meta http-equiv="Content-Security-Policy" content="connect-src *; default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">-->
 
 <link rel="stylesheet" href="css/foundation.min.css">
 <link rel="stylesheet" href="css/jquery.mobile-1.4.5.css" />
