--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="css/jquery.mobile-1.4.5.css" />
 <link rel="stylesheet" href="css/main.css">
 <link rel='stylesheet' href='css/jquery.mobile.simultaneous-transitions-replace.css'/>
-<link rel="stylesheet" href="css/swipebox.min.css">
+<!--<link rel="stylesheet" href="css/swipebox.min.css">-->
 
 
 <script src="js/lib/iscroll.js"></script>
@@ -37,14 +37,11 @@
 
 <script src="js/lib/tappy.js"></script>
 
-
-<script src="js/lib/socket.io-1.2.0.js"></script>   <!-- SOCKET IO  -->
-
 <!-- <script src="js/lib/hilitor.js"></script>-->
 <script src='js/utilities/utilities.js'></script>
 
 
-<script src="js/swipebox/jquery.swipebox.js"></script>
+<!--<script src="js/swipebox/jquery.swipebox.js"></script>-->
 
 
 <!-- CONTROLLERS -->
