--- a/www/index.html
+++ b/www/index.html
@@ -68,7 +68,8 @@
 <div id="container">
 <!-- ********************************************************************* -->
 
-<div data-role="page" id="initialBlank"></div>
+<div data-role="page" id="initialBlank">TBLACNK</div>
+
 <!-- ********************************************************************* -->
 <div data-role="page" id="login">
 
