--- a/www/index.html
+++ b/www/index.html
@@ -68,12 +68,12 @@
 <div id="container">
 <!-- ********************************************************************* -->
 
-<div data-role="page" id="initialBlank">TBLACNK</div>
+<div data-role="page" id="initialBlank"></div>
 
 <!-- ********************************************************************* -->
 <div data-role="page" id="login">
 
-     <div role="main" id="loginP" class="ui-content"></div><!-- /content -->
+     <div data-role="page" id="loginP"></div><!-- /content -->
 
 </div>
 
