--- a/www/index.html
+++ b/www/index.html
@@ -68,15 +68,13 @@
 <div id="container">
 <!-- ********************************************************************* -->
 
-<div data-role="page" id="initialBlank">LYCO SA DE CV</div>
-
-<div data-role="page" id="init2">Initial 2</div>
+<div data-role="page" style="display:none;" id="initialBlank"></div>
 
 
 
 <!-- ********************************************************************* -->
 <div data-role="page" id="loginJ">
-     <div role="main" id="loginPcont" class=""></div><!-- /content -->
+     
 </div>
 
 
