--- a/www/index.html
+++ b/www/index.html
@@ -68,15 +68,12 @@
 <div id="container">
 <!-- ********************************************************************* -->
 
-<div data-role="page" style="display:none;" id="initialBlank"></div>
+<div data-role="page" id="login" class="">
 
+       
+     <div role="main" id="loginP" class="ui-content "></div><!-- /content -->
 
-
-<!-- ********************************************************************* -->
-<div data-role="page" id="loginJ">
-     
 </div>
-
 
 
 <div data-role="page" id="mainScreen">
