--- a/www/index.html
+++ b/www/index.html
@@ -125,7 +125,7 @@
             <div class="bButton"  data-direction="reverse"><img src="img/backArrow.png"></div>
         </div>
          <div class="small-8 column rPad">
-              <div class="titleList">Búsqueda de Productos</div>
+              <div class="titleList">Búsqueda</div>
          </div>
          <div class="small-2 column rPad">
             <div class="hButton"  data-direction="reverse"><img src="img/home.png"></div>
